--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
 	font-family: "Arial","Helvetica Neue","Helvetica","sans-serif";
+	padding: 0px;
+	margin: 0px;
 }
 
 h1,h2{
@@ -9,9 +11,17 @@ h1,h2{
 img{
 	width:200px;
 	height: 200px;
+	display: block;
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 10px;
 }
 
 aside img{
 	height: 50px;
 	width: 50px;
+}
+
+section{
+text-overflow: : auto;
 }
