--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 body {
 	font-family: "Arial","Helvetica Neue","Helvetica","sans-serif";
+	background-color: #dddddd;
 	padding: 0px;
 	margin: 0px;
+	width: 960px;
 }
 
 h1,h2{
@@ -24,4 +26,27 @@ aside img{
 
 section{
 text-overflow: : auto;
+}
+
+article{
+	float: left;
+	/*padding: 20px;*/
+	width: 650px;
+	background-color: #ffffff;
+}
+
+aside{
+	display: inline-block;
+	width:270px;
+	padding: 0px;
+	
+	background-color: #ffffff;
+	text-align: center;
+	margin-left:20px;
+}
+
+hr{
+	width: 90%;
+	color: #4aaaa5;
+
 }
