--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,20 +27,24 @@ header{
 	left: 0;
 	right: 0;
 	margin: auto;
+	font-weight: bolder;
 }
 
 .name{
 	background-color: #4aaaa5;
-}
+	padding: 20px;
 
-.name, h1{
-	margin-left: 30px;
 }
 
 nav{
 	width: 270px;	
+	
 }
 
+.nav-button{
+	vertical-align: center;
+	padding: 20px 0px;
+}
 
 nav a{
 	float: left;
@@ -69,6 +73,10 @@ section{
 	padding: 0 5%;
 }
 
+h1{
+	margin-left: 30px;
+}
+
 h1,h2{
 	font-family: "Georiga", "Times", "Times New Roman","serif";
 }
@@ -88,11 +96,13 @@ article img{
 
 aside{
 	display: inline-block;
+	height: 100%;
 	width:270px;
-	padding: 0px;
+	padding: 0px 0px 25px 0px;
 	margin-left: 40px;
 	background-color: #ffffff;
-	justify-content: center;
+	text-align: center;
+	
 }
 
 aside img{
@@ -103,7 +113,7 @@ aside img{
 
 footer{
 	clear:left;
-	height: 100px;
+	height: 50px;
 	background-color: #666666;
 	border-top: solid 10px #4aaaa5;
 	font-weight: bold;
