--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* All Pages */
 html{
 	height: 100%;
 }
@@ -11,7 +12,6 @@ body {
 	height: 100%;
 	display: flex;
   flex-direction: column;
-
 }
 
 header{
@@ -38,7 +38,6 @@ header{
 .name{
 	background-color: #4aaaa5;
 	padding: 20px;
-
 }
 
 nav{
@@ -73,23 +72,52 @@ article{
 	border-color: #dddddd;
 }
 
-section{
-	text-overflow: : auto;
-	padding: 0 5%;
+h1,h2{
+	font-family: "Georiga", "Times", "Times New Roman","serif";
 }
 
 h1{
 	margin-left: 30px;
 }
 
-h1,h2{
-	font-family: "Georiga", "Times", "Times New Roman","serif";
-}
-
 hr{
 	width: 90%;
 	color: #4aaaa5;
 }
+
+aside{
+	display: inline-block;
+	width:270px;
+	padding: 0px 0px 25px 0px;
+	margin-left: 40px;
+	background-color: #ffffff;
+	text-align: center;
+}	
+
+aside img{
+	height: 50px;
+	width: 50px;
+}
+
+footer{
+	clear:left;
+	min-height: 50px;
+	background-color: #666666;
+	border-top: solid 10px #4aaaa5;
+	font-weight: bold;
+	display: flex;
+	display: -webkit-flex; /* Safari */
+	align-items: center;
+	justify-content: center;
+}
+
+/* About Page */
+
+section{
+	text-overflow: : auto;
+	padding: 0 5%;
+}
+
 
 article img{
 	width:200px;
@@ -98,6 +126,8 @@ article img{
 	float: left;
 	margin: 20px 20px 5px 35px;
 }
+
+/* Contact Page */
 
 fieldset{
 	border:0;
@@ -110,32 +140,4 @@ fieldset{
 .contact textarea{
 	width: 100%;
 	height: 150px;
-}
-
-aside{
-	display: inline-block;
-	width:270px;
-	padding: 0px 0px 25px 0px;
-	margin-left: 40px;
-	background-color: #ffffff;
-	text-align: center;
-	
-}
-
-aside img{
-	height: 50px;
-	width: 50px;
-}
-
-
-footer{
-	clear:left;
-	min-height: 50px;
-	background-color: #666666;
-	border-top: solid 10px #4aaaa5;
-	font-weight: bold;
-	display: flex;
-	display: -webkit-flex; /* Safari */
-	align-items: center;
-	justify-content: center;
 }
