--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ main{
 article{
 	float: left;
 	padding: 0px;
+	margin-top: 50px;
 	width: 650px;
 	background-color: #ffffff;
 	border-color: #dddddd;
@@ -89,6 +90,7 @@ aside{
 	display: inline-block;
 	width:270px;
 	padding: 0px 0px 25px 0px;
+	margin-top: 50px;
 	margin-left: 40px;
 	background-color: #ffffff;
 	text-align: center;
@@ -111,15 +113,15 @@ footer{
 	justify-content: center;
 }
 
-/* About Page */
-
 section{
 	text-overflow: : auto;
 	padding: 0 5%;
 }
 
+/* About Page */
 
-article img{
+
+#profile-pic{
 	width:200px;
 	height: 200px;
 	display: block;
@@ -140,4 +142,28 @@ fieldset{
 .contact textarea{
 	width: 100%;
 	height: 150px;
+}
+
+/* Portfolio Page */
+
+figure{
+	float: left;
+	margin-left: 7%;
+	margin-right: 7%;
+	padding-top: 50px;
+	text-align: center;
+}
+
+figure img{
+	width: 200px;
+	height: 200px;
+	z-index: 1;
+}
+
+figcaption{
+	position: relative;
+	background-color: #4aaaa5;
+	padding: 10px 0;
+	margin-top: -60px;
+	z-index: 2;
 }
