--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ header{
 .name{
 	float: left;
 	background-color: #4aaaa5;
+	color: #ccc;
 	padding: 20px;
 }
 
@@ -111,6 +112,7 @@ aside img{
 footer{
 	clear:left;
 	min-height: 50px;
+	color: #ccc;
 	background-color: #666666;
 	border-top: solid 10px #4aaaa5;
 	font-weight: bold;
