--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,178 +1,186 @@
 /* All Pages */
-html{
-	height: 100%;
-}
+	html{
+		height: 100%;
+	}
 
-body {
-	font-family: "Arial","Helvetica Neue","Helvetica","sans-serif";
-	background-color: #dddddd;
-	padding: 0px;
-	margin: 0 auto;
-	color: #777777;
-	height: 100%;
-	display: flex;
-  flex-direction: column;
-}
+	body {
+		font-family: "Arial","Helvetica Neue","Helvetica","sans-serif";
+		background-color: #dddddd;
+		padding: 0px;
+		margin: 0 auto;
+		color: #777777;
+		height: 100%;
+		display: flex;
+	  flex-direction: column;
+	}
 
-header{
-	background-color: #ffffff;
-	border-bottom: solid 2px #cccccc;
-	min-height: 100px;	
-	position: relative;
-}
+	header{
+		background-color: #ffffff;
+		border-bottom: solid 2px #cccccc;
+		min-height: 75px;	
+		position: relative;
+	}
 
-.headerContent{
-	position: absolute;
-	display: flex;
-	display: -webkit-flex; /* Safari */
-  justify-content: space-between;
-  vertical-align: bottom;
-  width: 960px;
-  bottom: 0px;
-	left: 0;
-	right: 0;
-	margin: auto;
-	font-weight: bolder;
-}
+	.headerContent{
+		position: absolute;
+		display: flex;
+		display: -webkit-flex; /* For Safari */
+	  justify-content: space-between;
+	  vertical-align: bottom;
+	  width: 960px;
+	  bottom: 0px;
+		left: 0;
+		right: 0;
+		margin: auto;
+		font-weight: bolder;
+	}
 
-.name{
-	float: left;
-	background-color: #4aaaa5;
-	color: #ccc;
-	padding: 20px;
-}
+	.name{
+		float: left;
+		background-color: #4aaaa5;
+		color: #ccc;
+		padding: 20px;
+	}
 
-nav{
-	width: 270px;
-	float: right;
-}
+	nav{
+		width: 270px;
+		float: right;
+	}
 
-nav a{
-	float: left;
-	width: 32%;
-	margin: 0;
-	padding: 20px 0px;
-	vertical-align: center;
-	text-align: center;
-	text-decoration: none;
-	color: #777777;
-	border-right: solid #777777 1px;
-	line-height: 5px;
-}
+	nav a{
+		float: left;
+		width: 32%;
+		margin: 0;
+		padding: 20px 0px;
+		text-align: center;
+		text-decoration: none;
+		color: #777777;
+		border-right: solid #777777 1px;
+	}
 
 
-nav a:last-of-type{
-	border-right: none;
-}
+	nav a:last-of-type{
+		border-right: none;
+	}
 
-main{
-	width: 960px;
-	margin: 0 auto;
-  flex: 1 0 auto;
-}
+	main{
+		width: 960px;
+		margin: 0 auto;
+	  flex: 1 0 auto;
+	}
 
-article{
-	float: left;
-	padding: 0px;
-	margin-top: 50px;
-	width: 650px;
-	background-color: #ffffff;
-	border: solid 1px #dddddd;
-}
+	article{
+		float: left;
+		padding: 0px;
+		margin-top: 50px;
+		width: 650px;
+		background-color: #ffffff;
+		border: solid 1px #dddddd;
+	}
 
-h1,h2{
-	font-family: "Georiga", "Times", "Times New Roman","serif";
-	color: #4aaaa5;
-}
+	h1,h2{
+		font-family: "Georiga", "Times", "Times New Roman","serif";
+		color: #4aaaa5;
+	}
 
-h1{
-	margin-left: 30px;
-}
+	h1{
+		margin-left: 30px;
+	}
 
-hr{
-	width: 90%;
-	color: #4aaaa5;
-}
+	hr{
+		width: 90%;
+		color: #4aaaa5;
+	}
 
-aside{
-	float: right;
-	width:270px;
-	padding: 0px 0px 25px 0px;
-	margin-top: 50px;
-	background-color: #ffffff;
-	text-align: center;
-}	
+	aside{
+		float: right;
+		width:270px;
+		padding: 0px 0px 25px 0px;
+		margin-top: 50px;
+		background-color: #ffffff;
+		text-align: center;
+	}	
 
-aside img{
-	height: 50px;
-	width: 50px;
-	padding: 0% 5%;
-}
+	aside img{
+		height: 50px;
+		width: 50px;
+		padding: 0% 5%;
+	}
 
-footer{
-	clear:left;
-	min-height: 50px;
-	color: #ccc;
-	background-color: #666666;
-	border-top: solid 10px #4aaaa5;
-	font-weight: bold;
-	display: flex;
-	display: -webkit-flex; /* Safari */
-	align-items: center;
-	justify-content: center;
-}
+	footer{
+		clear:left;
+		min-height: 50px;
+		color: #ccc;
+		background-color: #666666;
+		border-top: solid 10px #4aaaa5;
+		font-weight: bold;
+		display: flex;
+		display: -webkit-flex; /* Safari */
+		align-items: center;
+		justify-content: center;
+	}
 
-section{
-	text-overflow: : auto;
-	padding: 0 5%;
-}
+	section{
+		text-overflow: : auto;
+		padding: 0 5%;
+	}
 
 /* About Page */
 
 
-#profile-pic{
-	width:200px;
-	height: 200px;
-	display: block;
-	float: left;
-	margin: 20px 20px 5px 35px;
-}
+	#profile-pic{
+		width:200px;
+		height: 200px;
+		display: block;
+		float: left;
+		margin: 20px 20px 5px 35px;
+	}
 
-/* Contact Page */
+	/* Contact Page */
 
-fieldset{
-	border:0;
-}
+	fieldset{
+		border:0;
+	}
 
-.contact input:not([type="submit"]){
-	width: 100%
-}
+	/*Applies stlyling to all form fields except the submit button*/
+	.contact input:not([type="submit"]){
+		width: 100%
+	}
 
-.contact textarea{
-	width: 100%;
-	height: 150px;
-}
+	.contact textarea{
+		width: 100%;
+		height: 150px;
+	}
+
+	/*Applies styling only to the submit button input tyle of the form*/
+	.contact input[type="submit"]{
+		background-color: #4aaaa5;
+		color: #ccc;
+		font-size: 16px;
+		font-weight: bold;
+		padding: 5px 20px;
+	}
 
 /* Portfolio Page */
 
-figure{
-	float: left;
-	margin-left: 7%;
-	margin-right: 7%;
-	padding-top: 50px;
-	text-align: center;
-}
+	figure{
+		float: left;
+		margin-left: 7%;
+		margin-right: 7%;
+		padding-top: 50px;
+		text-align: center;
+	}
 
-figure img{
-	width: 200px;
-	height: 200px;
-	z-index: 1;
-}
+	figure img{
+		width: 200px;
+		height: 200px;
+		z-index: 1;
+	}
 
-figcaption{
-	position: relative;
-	background-color: #4aaaa5;
-	padding: 10px 0;
-	margin-top: -60px;
-	z-index: 2;
-}
+	figcaption{
+		position: relative;
+		background-color: #4aaaa5;
+		padding: 10px 0;
+		margin-top: -60px;
+		z-index: 2;
+	}
