--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@
 		margin-top: 50px;
 		width: 650px;
 		background-color: #ffffff;
-		border: solid 1px #dddddd;
+		border: solid 1px #888;
 	}
 
 	h1,h2{
@@ -102,6 +102,7 @@
 		padding: 0px 0px 25px 0px;
 		margin-top: 50px;
 		background-color: #ffffff;
+		border: solid 1px #888;
 		text-align: center;
 	}	
 
